Atualizações na tela de partida

--- a/src/main/java/View/MenuPrincipalView.form
+++ b/src/main/java/View/MenuPrincipalView.form
@@ -13,18 +13,13 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Jogador"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemNovoJogadorActionPerformed"/>
+          </Events>
           <SubComponents>
-            <MenuItem class="javax.swing.JMenuItem" name="menuItemEditarJogador">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Cadastrar/Editar jogador"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemEditarJogadorActionPerformed"/>
-              </Events>
-            </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemVerJogadores">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Ver jogadores cadastrados"/>
+                <Property name="text" type="java.lang.String" value="Ver Jogadores"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemVerJogadoresActionPerformed"/>
@@ -114,11 +109,11 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="new javax.swing.ImageIcon(getClass().getResource(&quot;/View//ImagemCampo.jpg&quot;))" type="code"/>
+          <Connection code="new javax.swing.ImageIcon(getClass().getResource(&quot;/View//Imagens/IMAGEMGRAMADO.jpg&quot;))" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ImageIcon icon = new ImageIcon(getClass().getResource(&quot;/View//ImagemCampo.jpg&quot;));&#xa;setExtendedState(JFrame.MAXIMIZED_BOTH);&#xa;// Obtenha as dimens&#xf5;es da tela&#xa;Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();&#xa;&#xa;// Obtenha as dimens&#xf5;es da imagem&#xa;int imageWidth = icon.getIconWidth();&#xa;int imageHeight = icon.getIconHeight();&#xa;&#xa;// Calcule as propor&#xe7;&#xf5;es de escala&#xa;double scaleX = (double) screenSize.width / imageWidth;&#xa;double scaleY = (double) screenSize.height / imageHeight;&#xa;&#xa;// Use a propor&#xe7;&#xe3;o de escala maior para preencher a tela&#xa;double scale = Math.max(scaleX, scaleY);&#xa;&#xa;// Redimensione a imagem para preencher a tela&#xa;Image scaledImage = icon.getImage().getScaledInstance((int) (scale * imageWidth), (int) (scale * imageHeight), Image.SCALE_DEFAULT);&#xa;&#xa;// Crie um novo ImageIcon com a imagem redimensionada&#xa;ImageIcon scaledIcon = new ImageIcon(scaledImage);&#xa;&#xa;// Defina o &#xed;cone na JLabel&#xa;jLabel3.setIcon(scaledIcon);"/>
+        <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="ImageIcon icon = new ImageIcon(getClass().getResource(&quot;/View//Imagens/IMAGEMGRAMADO.jpg&quot;));&#xa;setExtendedState(JFrame.MAXIMIZED_BOTH);&#xa;// Obtenha as dimens&#xf5;es da tela&#xa;Dimension screenSize = Toolkit.getDefaultToolkit().getScreenSize();&#xa;&#xa;// Obtenha as dimens&#xf5;es da imagem&#xa;int imageWidth = icon.getIconWidth();&#xa;int imageHeight = icon.getIconHeight();&#xa;&#xa;// Calcule as propor&#xe7;&#xf5;es de escala&#xa;double scaleX = (double) screenSize.width / imageWidth;&#xa;double scaleY = (double) screenSize.height / imageHeight;&#xa;&#xa;// Use a propor&#xe7;&#xe3;o de escala maior para preencher a tela&#xa;double scale = Math.max(scaleX, scaleY);&#xa;&#xa;// Redimensione a imagem para preencher a tela&#xa;Image scaledImage = icon.getImage().getScaledInstance((int) (scale * imageWidth), (int) (scale * imageHeight), Image.SCALE_DEFAULT);&#xa;&#xa;// Crie um novo ImageIcon com a imagem redimensionada&#xa;ImageIcon scaledIcon = new ImageIcon(scaledImage);&#xa;&#xa;// Defina o &#xed;cone na JLabel&#xa;jLabel3.setIcon(scaledIcon);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
