--- a/src/main/java/View/CriarPartidaView.form
+++ b/src/main/java/View/CriarPartidaView.form
@@ -268,10 +268,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="true" title="ID" type="java.lang.Object"/>
-                <Column editable="true" title="Jogador" type="java.lang.Object"/>
-                <Column editable="true" title="Numero" type="java.lang.Object"/>
-                <Column editable="true" title="Posi&#xe7;&#xe3;o" type="java.lang.Object"/>
+                <Column editable="false" title="ID" type="java.lang.Object"/>
+                <Column editable="false" title="Jogador" type="java.lang.Object"/>
+                <Column editable="false" title="Numero" type="java.lang.Object"/>
+                <Column editable="false" title="Posi&#xe7;&#xe3;o" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -316,10 +316,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
-                <Column editable="true" title="ID" type="java.lang.Object"/>
-                <Column editable="true" title="Nome" type="java.lang.Object"/>
-                <Column editable="true" title="Numero" type="java.lang.Object"/>
-                <Column editable="true" title="Posi&#xe7;&#xe3;o" type="java.lang.Object"/>
+                <Column editable="false" title="ID" type="java.lang.Object"/>
+                <Column editable="false" title="Nome" type="java.lang.Object"/>
+                <Column editable="false" title="Numero" type="java.lang.Object"/>
+                <Column editable="false" title="Posi&#xe7;&#xe3;o" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
