--- a/src/main/java/View/RankingView.form
+++ b/src/main/java/View/RankingView.form
@@ -74,7 +74,7 @@
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor" postCode="DefaultTableCellRenderer centerRenderer = new DefaultTableCellRenderer();&#xa;        centerRenderer.setHorizontalAlignment(SwingConstants.CENTER);&#xa;        DefaultTableCellRenderer headerRenderer = (DefaultTableCellRenderer) tblRankingJogadores.getTableHeader().getDefaultRenderer();&#xa;        headerRenderer.setHorizontalAlignment(DefaultTableCellRenderer.CENTER);&#xa;        tblRankingJogadores.setDefaultRenderer(Object.class, centerRenderer);">
               <TableColumnModel selectionModel="0">
-                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
